<resources>
    <string name="app_name">fridge_friend</string>
    <string name="welcome_text">Welcome to Fridge Friend</string>
    <string name="qr_code_desc">Barcode scanner </string>
    <string name="fridge_instance">Fridge Instance</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="profile_setting_welcome">"Welcome User"</string>
    <string name="personal_settings">"Personal Settings"</string>
    <string name="notifications">"Notifications"</string>
    <string name="account_management">"Account Management"</string>
    <string name="diet_preferences">"Dietary Preferences"</string>
    <string name="first_name">"Name"</string>
    <string name="email">"Email"</string>
    <string name="save_button">"Save"</string>
    <string name="allow_notifications">"Allow Notifications"</string>
    <string name="recipes">"Displaying recipes and filtering options"</string>
    <string name="heading_fridge_list">"Click on Fridge to check contents, press the plus symbol beside it to add an Item"</string>
    <string name="join_fridge">"Join Fridge"</string>
    <string name="fridge_name">"Fridge Name"</string>
    <string name="heading_fridge_detail">"Fridges Detail"</string>
    <string name="item_icon_description">"A fruit basket"</string>
    <string name="item_name">"Apples"</string>
    <string name="forward_arrow_description">"View item detail"</string>
    <string name="item_owner">Owner: %1$s</string>
    <string name="item_quantity">Quantity: %1$s</string>
    <string name="item_expiry">Expiry Date: %1$s</string>
    <string name="add_item">Add Item</string>
    <string name="item_addition_activity_heading">Add New Item To The Fridge</string>
    <string name="item_name_hint">Enter item name</string>
    <string name="item_quantity_hint">Enter quantity</string>
    <string name="expiry_date_hint">Enter expiry date (DD/MM/YYYY)</string>
    <string name="save">Save</string>


    <string name="pref_file">preferences_file</string>
    <string name="pref_email">preferred_email</string>
    <string name="my_fridges">My Fridges</string>
    <string name="new_fridge">New Fridge</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="shopping_list">Shopping List</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="signed_out">Signed Out</string>
    <string name="home">Home</string>
    <string name="my_fridges_clicked">My Fridges Clicked</string>
    <string name="new_fridge_clicked">New Fridge Clicked</string>
    <string name="barcode_scanner_clicked">Barcode Scanner Clicked</string>
    <string name="shopping_list_clicked">Shopping List Clicked</string>
    <string name="join_existing_fridge">Join Existing Fridge</string>
    <string name="fridge_settings">Fridge Settings</string>
    <string name="create">Create</string>
    <string name="existing_fridge_name">Existing Fridge Name</string>
    <string name="join">join</string>
    <string name="clear_list">Clear Shopping List</string>
    <string name="item_data">(Insert Formatted Item Data here)</string>
    <string name="error_loading_name">An Error occurred while loading name</string>
    <string name="error_saving_changes">An Error occurred while saving changes</string>
    <string name="cancelled">Cancelled</string>
    <string name="please_wait">Please wait....</string>
    <string name="saving_changes">Saving changes....</string>
    <string name="leaving_fridge">Leaving fridge....</string>
    <string name="removing_user">Removing user....</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="enter_name">Please enter a name</string>
    <string name="retrieving_data">Retrieving Item Data...</string>
    <string name="press_to_start">Press scan to scan product</string>
    <string name="item_icon_description_user">"A a person icon"</string>
    <string name="error_loading_users">An Error occurred while loading users</string>
    <string name="fridge_prefix">Fridge: %1$s</string>
    <string name="username_prefix">User: %1$s</string>
    <string name="remove_user">Remove User</string>
    <string name="leave_fridge">Leave Fridge</string>
    <string name="error_leaving_fridge">An Error occurred while leaving the fridge</string>
    <string name="error_removing_user">An Error occurred while removing the user</string>
    <string name="User">"User: "</string>
    <string name="delete_user">Delete User</string>
    <string name="barcodeScannerAbout">This activity allows the user to scan barcodes of various food items and view its data. Data is retrieved from OpenFoodsFacts API, an open source API for view food information. This data can also be reaccessed from the Shopping List Activity.\n</string>
    <string name="barcode_scanner_title">Barcode Scanner - Ver. 3</string>
    <string name="fridge_detail_ac_title">Fridge Detail Activity Ver. 2</string>
    <string name="fridgeDetailAbout">This activity allows the user to view all items that are in this specific fridge. Pressing on an item allows the user to see the details of the item \nANY ITEMS IN RED ARE ITEMS 4 DAYS BEFORE THEIR EXPIRATION.</string>
    <string name="fridge_list_title">Fridge List - Version 3</string>
    <string name="fridgeListAbout">This activity allows the user to view their fridges they are currently joined with. Clicking on a fridge name allows the user to view their food items. Otherwise, they can press on the \"+\" beside their target fridge to add an item to the target fridge.</string>
    <string name="fridge_setting_title">Fridge Settings Activity - Version 2</string>
    <string name="fridgeSettingAbout">From this activity the user can create a new fridge, or add a new fridge to join. Press either row to see the dropdown fields to do either task.</string>
    <string name="fridge_userList_title">Fridge User List - Ver. 1</string>
    <string name="fridgeUserListAbout">"This activity the user can view the users currently registered in a fridge, and have the option to remove the user from the fridge if need be. "</string>
    <string name="item_addition_title">Item Addition - Ver 2.</string>
    <string name="itemAddAbout">This activity is where the user can add a custom food. Here they can input a name, quantity, and expiration date of the food item.</string>
    <string name="item_detail_title">Fridge Item - Version 2</string>
    <string name="itemDetailAbout">This activity allows the user to view the details of the currently viewed item. Here you can see the Name and quantity of the item, as well as who currently owns it. You can also delete this item.</string>
    <string name="main_title">Main Page - Ver 2.</string>
    <string name="mainAbout">This is the homepage. From here you can access all the possible activities to use. \n \tBarcode scanner: Scans item barcodes\n \tShopping list: See previously scanned barcodes\n \tNew Fridge: create or join a fridge\n \tMy Fridges: View the details of joined fridges \n\n (All activities created by Brian, Eric, Naimo, Sterling)</string>
    <string name="shopping_item_detail_title">Shopping Item View - Ver 3.</string>
    <string name="shoppingItemDetailAbout">This activity allows the user data of a specific item from the shopping list. Data is retrieved from OpenFoodsFacts API, an open source API for view food information. This data can also be added to a fridge of choice.</string>
    <string name="shopping_list_title">Shopping List - Ver 2.</string>
    <string name="shoppingListAbout">This activity can let the user see the items that they have recently scanned for reviewing. Here clearing the shopping list possible with the button at the bottom, or press on an item to view its item details.</string>
    <string name="user_details_title">Fridge User List - Ver. 1</string>
    <string name="userDetailsAbout">"This activity the user can view the users currently registered in a fridge, and have the option to remove the user from the fridge if need be. "</string>
    <string name="user_settings_title">User settings - Ver 3.</string>
    <string name="userSettingsAbout">This activity allows the user to change their username, a recommended action when first registering for an account.</string>
    <string name="add_to_fridge">Add to Fridge</string>
    <string name="cancel">Cancel</string>

    <string name="password">Password</string>
    <string name="login">Email</string>
    <string name="login_request">Login</string>
    <string name="register_request">Register New Account</string>
    <string name="login_title">Fridge Friend</string>
    <string name="login_bar">Fridge Friend Login Page</string>

    <string name="email_required">You must input email to login</string>
    <string name="email_valid_required">Must be valid email format (i.e. user@email.com)</string>
    <string name="email_required_create_account">You must input valid email to create account</string>
    <string name="password_required">You must input password</string>
    <string name="logging_in">Logging in...</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="default_email">email@domain.com</string>
    <string name="auth_failed_password_length">Authentication failed, did you make your password 6 characters long?</string>
    <string name="login_success">Successful sign-in</string>
    <string name="login_failed">Failed sign-in</string>

    <string name="title_main_activity">Homepage</string>
    <string name="canceled">Cancelled</string>
    <string name="scanned">Scanned: </string>
    <string name="name">Name: </string>
    <string name="code">Code: </string>
    <string name="categories">Categories: </string>
    <string name="brands">Brands: </string>
    <string name="facts">Facts (per 100g): </string>
    <string name="ok">Ok</string>
    <string name="fill_in_all_fields">Please fill in all fields</string>
    <string name="item_saved">Item saved</string>
    <string name="Users" translatable="false">Users</string>

</resources>