<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background"
    android:padding="16dp"
    tools:context=".ItemAdditionActivity">

    <!-- Welcome User TextView -->
    <TextView
        android:id="@+id/textViewItemAdditionHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_addition_activity_heading"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="italic"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Item Name Input -->
    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_name_hint"
        app:layout_constraintTop_toBottomOf="@id/textViewItemAdditionHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Item Quantity Input -->
    <EditText
        android:id="@+id/editTextItemQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/item_quantity_hint"
        app:layout_constraintTop_toBottomOf="@id/editTextItemName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Expiration Date Input -->
    <EditText
        android:id="@+id/editTextExpiryDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/expiry_date_hint"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/editTextItemQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Save Button -->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/editTextExpiryDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/off_yellow"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>