<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/purple_background"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ItemDetailActivity">

    <!-- Heading TextView -->
    <TextView
        android:id="@+id/textViewWelcomeUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_setting_welcome"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Owner TextView -->
    <TextView
        android:id="@+id/textViewItemOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcomeUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/item_owner" />

    <!-- Quantity TextView -->
    <TextView
        android:id="@+id/textViewItemQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewItemOwner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/item_quantity"/>

    <!-- Expiry Date TextView -->
    <TextView
        android:id="@+id/textViewExpiryDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewItemQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/item_expiry"/>

</androidx.constraintlayout.widget.ConstraintLayout>
