<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background"
    android:padding="16dp"
    tools:context=".FridgeSettingActivity">

    <!-- Welcome User TextView -->
    <TextView
        android:id="@+id/textViewFridgeSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/fridge_settings"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Personal Settings Option -->
    <TextView
        android:id="@+id/textViewNewFridge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/new_fridge"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:onClick="toggleNewFridge"
        android:padding="16dp"
        android:text="@string/new_fridge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFridgeSettings" />

    <!-- Hidden expandable layout for Personal Settings -->
    <LinearLayout
        android:id="@+id/layoutNewFridgeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNewFridge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- New Fridge Name Field -->
        <EditText
            android:id="@+id/editTextNewFridgeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fridge_name"
            android:inputType="textPersonName" />

        <!-- Save Button -->
        <Button
            android:id="@+id/buttonCreateNewFridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_gravity="end" />
    </LinearLayout>



    <!-- Notifications Option -->
    <TextView
        android:id="@+id/textViewJoinFridge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/managing"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:onClick="toggleJoinFridge"
        android:padding="16dp"
        android:text="@string/join_existing_fridge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutNewFridgeInfo" />

    <!-- Hidden expandable layout for Notification Settings -->
    <!-- Hidden expandable layout for Personal Settings -->
    <LinearLayout
        android:id="@+id/layoutJoinExistingFridgeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewJoinFridge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- New Fridge Name Field -->
<!--        <EditText-->
<!--            android:id="@+id/editTextExistingFridgeID"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/existing_fridge_name"-->
<!--            android:inputType="textPersonName" />-->
        <AutoCompleteTextView
            android:id="@+id/autoCompleteFridgeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/existing_fridge_name"
            android:inputType="text" />

        <!-- Join Button -->
        <Button
            android:id="@+id/buttonRequestJoinFridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:layout_gravity="end" />

    </LinearLayout>

    <!-- Account Management Option -->

    <!-- Dietary Preferences Option -->

</androidx.constraintlayout.widget.ConstraintLayout>
