<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="19dp"
    android:background="@color/purple_background"
    tools:context=".UserSettingActivity">

    <!-- Welcome User TextView -->
    <TextView
        android:id="@+id/textViewWelcomeUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/profile_setting_welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Personal Settings Option -->
    <TextView
        android:id="@+id/textViewPersonalSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:onClick="togglePersonalSettings"
        android:padding="16dp"
        android:text="@string/personal_settings"
        app:drawableStartCompat="@drawable/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcomeUser" />

    <!-- Hidden expandable layout for Personal Settings -->
    <LinearLayout
        android:id="@+id/layoutPersonalSettingsInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPersonalSettings">

        <!-- Name Field -->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <!-- Save Button -->
        <Button
            android:id="@+id/buttonSavePersonalSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save_button" />
    </LinearLayout>


    <!-- Notifications Option -->
    <TextView
        android:id="@+id/textViewNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:onClick="toggleNotificationSettings"
        android:padding="16dp"
        android:text="@string/notifications"
        app:drawableStartCompat="@drawable/notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPersonalSettingsInfo" />

    <!-- Hidden expandable layout for Notification Settings -->
    <LinearLayout
        android:id="@+id/layoutNotificationSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNotifications"
        tools:visibility="visible">

        <!-- Allow Notifications Switch -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/allow_notifications" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAllowNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:thumbTint="#535050"
            app:trackTint="#8A8888" />
    </LinearLayout>

    <!-- Account Management Option -->
    <TextView
        android:id="@+id/textViewAccountManagement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:text="@string/account_management"
        app:drawableStartCompat="@drawable/managing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutNotificationSettings" />

    <!-- Dietary Preferences Option -->
    <TextView
        android:id="@+id/textViewDietaryPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:text="@string/diet_preferences"
        app:drawableStartCompat="@drawable/diet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAccountManagement" />

</androidx.constraintlayout.widget.ConstraintLayout>