<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="251dp"
        android:layout_marginBottom="252dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="2">


            <Button
                android:id="@+id/myFridgeButton"
                style="@style/MainActivity_Button"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/fridge"
                android:onClick="onMyFridge"
                android:text="@string/my_fridges" />

            <Button
                android:id="@+id/addFridgeButton"
                style="@style/MainActivity_Button"
                android:layout_gravity="center"
                android:drawableTop="@drawable/new_fridge"
                android:text="@string/new_fridge"
                android:layout_weight="1"
                android:onClick="onNewFridge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:id="@+id/barcodeScannerButton"
                style="@style/MainActivity_Button"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/barcode"

                android:onClick="onBarcodeScan"
                android:text="@string/barcode_scanner" />

            <Button
                android:id="@+id/listButton"
                style="@style/MainActivity_Button"
                android:drawableTop="@drawable/list"
                android:layout_gravity="center"
                android:text="@string/shopping_list"
                android:layout_weight="1"
                android:onClick="onShoppingList" />
        </LinearLayout>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>