<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background"
    android:padding="16dp"
    tools:context=".HomePage">

    <!-- Profile Icon ImageView -->
    <ImageView
        android:id="@+id/imageViewProfileIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/profile_user"
        android:contentDescription="@string/profile_setting"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackgroundBorderless" />

    <!-- welcome Label TextView -->
    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:background="@drawable/label"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfileIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewQRCode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/purple_background"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cardViewFridge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/imageViewQRCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/qr_code"
            android:contentDescription="@string/qr_code_desc"
            android:scaleType="centerInside" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFridge"
        app:cardBackgroundColor="@color/purple_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
        app:layout_constraintStart_toEndOf="@id/cardViewQRCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/buttonFridgeInstance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:scaleType="centerInside"
            android:src="@drawable/fridge"
            android:contentDescription="@string/fridge_instance"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
